# shellhist-forensic

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  fuzz.yml
core/: Cargo.toml  README.md
core/src/: bash.rs  fish.rs  lib.rs  powershell.rs  zsh.rs
docs/: index.md  privacy.md  terms.md
forensic/: Cargo.toml  README.md
forensic/src/: lib.rs
forensic/tests/: real_data.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bash.rs  fish.rs  forensic.rs  powershell.rs  zsh.rs
privacy/: index.html
search/: search_index.json
terms/: index.html
tests/data/: README.md  real_bash_history
