[workspace]
resolver = "2"
members = ["core", "forensic"]

[workspace.package]
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
authors = ["Albert Hui <albert@securityronin.com>"]

# Paranoid Gatekeeper: these crates parse untrusted, attacker-controllable shell
# history files. Never panic, never read out of bounds, never trust a length.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn", priority = -1 }
pedantic                 = { level = "warn", priority = -1 }
correctness              = { level = "deny", priority = -1 }
suspicious               = { level = "deny", priority = -1 }
unwrap_used              = { level = "deny", priority = 0 }
expect_used              = { level = "deny", priority = 0 }
module_name_repetitions  = { level = "allow", priority = 1 }
must_use_candidate       = { level = "allow", priority = 1 }
missing_errors_doc       = { level = "allow", priority = 1 }
missing_panics_doc       = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap       = { level = "allow", priority = 1 }
cast_sign_loss           = { level = "allow", priority = 1 }
cast_precision_loss      = { level = "allow", priority = 1 }
too_many_lines           = { level = "allow", priority = 1 }
items_after_statements   = { level = "allow", priority = 1 }
similar_names            = { level = "allow", priority = 1 }
manual_let_else          = { level = "allow", priority = 1 }
# Docs reference many external identifiers (HISTTIMEFORMAT, ConsoleHost_history.txt,
# Src/hist.c, …); backticking every one is noise.
doc_markdown             = { level = "allow", priority = 1 }

[profile.release]
lto = "thin"
codegen-units = 1
